# repoindex

./: .gitignore  404.html  CITATION.cff  CLAUDE.md  DESIGN.md  README.md  codemeta.json  index.html  mkdocs.yml  pyproject.toml
architecture-vision/: index.html
audit-command/: index.html
catalog-query/: index.html
changelog/: index.html
claude-plugin/: README.md
contributing/: index.html
docs/: architecture-vision.md  audit-command.md  catalog-query.md  changelog.md  contributing.md  docs-command.md  events.md  export-command.md  export.md  future-plans.md  getting-started.md  index.md  list-command.md  ops.md  progress-refactoring-guide.md  query-cookbook.md  render.md  shell-vfs.md  tui.md  tutorials.md  usage.md
docs-command/: index.html
export-command/: index.html
future-plans/: index.html
getting-started/: index.html
list-command/: index.html
progress-refactoring-guide/: index.html
query-cookbook/: index.html
repoindex/: __init__.py  __main__.py  analytics_store.py  api.py  citation.py  cli.py  cli_utils.py  compat.py  config.py  core.py  cran.py  events.py  exit_codes.py  format_utils.py  ghops.py  gitignore.py  metadata.py  output.py  progress.py  pypi.py  query.py  render.py  repo_filter.py  tags.py  utils.py  version_manager.py  vfs_utils.py
search/: search_index.json
shell-vfs/: index.html
tests/: run_tests.py  test_analytics_store.py  test_audit_service.py  test_citation.py  test_cli_comprehensive.py  test_cli_smoke.py  test_config.py  test_config_excludes.py  test_config_extended.py  test_config_settings.py  test_copy.py  test_copy_command.py  test_core.py  test_cran.py  test_database.py  test_digest.py  test_domain.py  test_events.py  test_export.py  test_export_arkiv.py  test_export_command.py  test_export_html.py  test_get.py  test_github_ops_service.py  test_gitignore.py  test_init_command.py  test_integration.py  test_license.py  (+29 more)
(+158 files in other folders)
